fixed overflowx on mobile

--- a/myCV/static/css/style3.css
+++ b/myCV/static/css/style3.css
@@ -638,6 +638,10 @@ body {
         overflow-x: hidden;
     }
 
+    .mainContainer {
+        overflow-x: hidden;
+    }
+
 
     .rightLinks {
         display: none;
